kubernetes/apps/home/fhem/geo-webhook/proxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app fhem-geo-webhook
  namespace: home
  labels:
    kubernetes.io/service-name: *app
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: webhook-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Restricted - Authentication Required'
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
  - host: "fhem.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /webhook
        pathType: Prefix
        backend:
          service:
            name: *app
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fhem-geo-webhook
  namespace: home
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8088
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app fhem-geo-webhook # Must be equal to Service name for automatic mapping
  namespace: home
  labels:
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8088
endpoints:
  - addresses:
      - 192.168.2.121
