kubernetes/apps/home/fhem/geo-webhook/proxy2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app fhem
  labels:
    kubernetes.io/service-name: *app
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
   # nginx.ingress.kubernetes.io/auth-type: basic
   # nginx.ingress.kubernetes.io/auth-secret: webhook-basic-auth
   # nginx.ingress.kubernetes.io/auth-realm: 'Restricted - Authentication Required'
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Freundliche Hausautomatisierung in Perl
    gethomepage.dev/group: Home Automation
    gethomepage.dev/icon: https://raw.githubusercontent.com/volschin/home-ops/main/docs/assets/icons/fhem.png
    gethomepage.dev/name: FHEM
    gethomepage.dev/siteMonitor: http://fhem.home/fhem
    gethomepage.dev/weight: "1"
spec:
  ingressClassName: internal
  rules:
  - host: "fhem.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *app
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fhem
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8083
      name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app fhem # Must be equal to Service name for automatic mapping
  namespace: home
  labels:
    kubernetes.io/service-name: *app
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8083
endpoints:
  - addresses:
      - 192.168.2.121
